feat(category-mgt): add endpoints and ui for managing categories
