# apps/atelier/backend/src/modules/inventory/dto/requests.dto.ts
@@ -9,7 +9,13 @@ const createCategorySchema = z.object({
   name: z.string(),
 });
 
+const updateCategorySchema = z.object({
+  name: z.string(),
+});
+
 //  --- EXPORTS ---
 export class CategoryParams extends createZodDto(categoryParamsSchema) {}
 
 export class CreateCategoryDto extends createZodDto(createCategorySchema) {}
+
+export class UpdateCategoryDto extends createZodDto(updateCategorySchema) {}
